--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Speak</title>
+
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="bananaSpeak.css">
 </head>
 <body>
-    Talk banana...
+    <h1 id="heading">Talk Bananaaa...</h1>
+
+    <textarea id="textInput" placeholder="Enter your text here in English and it will convert to banana"></textarea>
+
+    <button id="btnTranslate">Translate</button>
+
+    <!-- VanillaJS sheet -->
+    <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
