--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 
     <!-- Style Sheet -->
     <link rel="stylesheet" href="bananaSpeak.css">
+    
 </head>
 <body>
-    <h1 id="heading">Talk Bananaaa...</h1>
+    <h1 id="heading">Talk Bananaaaa...</h1>
 
-    <textarea id="textInput" placeholder="Enter your text here in English and it will convert to banana"></textarea>
+    <!-- input -->
+    <textarea id="textInput" placeholder="Enter your english sentence here and this will be converted to bananaaa"></textarea>
 
-    <button id="btnTranslate">Translate</button>
+    <button id="btnTranslate">Massage</button>
+
+    <!-- output -->
+    <h3>Output will come here</h3>
+    <div class="output"></div>
 
     <!-- VanillaJS sheet -->
     <script src="app.js" type="text/javascript"></script>
